Cleaned up channel tab UI.  Removed extraneous white space, fixed hotspot for the delete button, italicized tag filter, and removed extraneous grey border on the top edge of grapher canvas

--- a/fluxtream-web/src/main/webapp/css/bodytrack.css
+++ b/fluxtream-web/src/main/webapp/css/bodytrack.css
@@ -248,7 +248,6 @@
 }
 
 ._timeline_plotContainer {
-    border-top: 1px solid #CCCCCC;
     border-left: 1px solid #CCCCCC;
     border-right: 1px solid #CCCCCC;
 }
